:books: docs: add new documentation on member routes
