# docs/swagger.json
@@ -1,13 +1,13 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a sample server celler server.",
-        "title": "Swagger Example API",
+        "description": "Este é o backend do sistema de gerenciamento.\nPara controle de código está sendo usado o Github\nLink para o repositorio: https://github.com/TheSamuelVitor/api-go-postgres",
+        "title": "API Sistema de Gerenciamento de Projetos",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
-            "name": "API Support",
-            "url": "http://www.swagger.io/support",
-            "email": "support@swagger.io"
+            "name": "Samuel Vitor",
+            "url": "https://github.com/TheSamuelVitor/api-go-postgres",
+            "email": "thesamuelvitor.py@gmail.com"
         },
         "license": {
             "name": "Apache 2.0",
@@ -47,6 +47,43 @@
                         }
                     }
                 }
+            }
+        },
+        "/membros/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "bearerToken": []
+                    }
+                ],
+                "description": "Get all the existing members",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "members"
+                ],
+                "summary": "Shows member which has the id equals to given",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID_membro",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.MembrocomEquipe"
+                        }
+                    }
+                }
             },
             "delete": {
                 "security": [
@@ -59,6 +96,15 @@
                     "members"
                 ],
                 "summary": "Deleta membro",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID_membro",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {}
             }
         }
@@ -68,25 +114,30 @@
             "type": "object",
             "properties": {
                 "funcao": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Desenvolvedor Backend"
                 },
                 "id_equipe": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 7
                 },
                 "id_membro": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1
                 },
                 "nome_equipe": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Komanda"
                 },
                 "nome_membro": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Samuel"
                 }
             }
         }
     },
     "securityDefinitions": {
-        "BasicAuth": {
+        "BasicToken": {
             "type": "basic"
         }
     }
